# innovateTech

./: README.md
blockchain/: .gitignore  Cargo.toml  package-lock.json
blockchain/client/: main.js  package-lock.json
blockchain/contracts/: basic-logic.sol
blockchain/src/: lib.rs  structs.rs
frontEnd/: .env  next.config.js  package-lock.json  package.json
frontEnd/public/images/: prototype_present.avif
frontEnd/src/app/: globals.css  page.js  style.module.css
frontEnd/src/app/api/auth/[...nextauth]/: route.js
frontEnd/src/app/api/projects/: route.js
frontEnd/src/app/api/projects/[id]/: route.js
frontEnd/src/app/login/: page.jsx
frontEnd/src/app/projects/: page.jsx
frontEnd/src/app/projects/[id]/: page.jsx
frontEnd/utils/: database.js
